// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`considers both value and suitability 1`] = `
Array [
  Array [
    0.3,
    0.4,
  ],
  Array [
    0.5,
    0.6,
  ],
  Array [
    0.7,
    0.5,
  ],
]
`;

exports[`generates a value for each ship-goal combination 1`] = `
Array [
  Array [
    0.5,
    0.5,
  ],
  Array [
    0.5,
    0.5,
  ],
  Array [
    0.5,
    0.5,
  ],
]
`;
